--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-HF_API_TOKEN=your_huggingface_api_token
 MONGO_URI=your_mongodb_connection_string
 SECRET_KEY=your_secret_key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 REFRESH_TOKEN_EXPIRE_MINUTES=1440
 REFRESH_TOKEN_EXPIRE_MINUTES=30
+HF_API_TOKEN=your_huggingface_api_token
 SENDINBLUE_API_KEY=your_sendinblue_api_key
 SENDER_EMAIL=your_sender_email
 CONTACT_RECIPIENT_EMAIL=your_contact_recipient_email
-
+VITE_API_URL=http://backend:8000
 
 
