--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,5 +19,7 @@ RUN npm run build
 # Expose port 3000
 EXPOSE 3000
 
+RUN npm install -g serve
+
 # Serve the React application
 CMD ["npx", "serve", "-s", "build", "-l", "3000"]
