--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,27 @@
-# Use the official lightweight Node.js image
-FROM node:20-bullseye-slim
-
-# Set working directory inside the container
+# Stage 1: Build the React app
+FROM node:20-bullseye-slim AS builder
 WORKDIR /app
 
-# Copy package.json and package-lock.json
+# Copy package files and install dependencies
 COPY package*.json ./
-
-# Install dependencies (use --legacy-peer-deps for potential Chart.js issues)
 RUN npm install --legacy-peer-deps
 
-# Copy the rest of the application
+# Copy the rest of the source code and build the app
 COPY . .
-
-# Build the application
 RUN npm run build
 
-# Expose port 3000
-EXPOSE 3000
+# Stage 2: Serve the built app using serve
+FROM node:20-bullseye-slim
+WORKDIR /app
 
+# Copy the production build from the builder stage
+COPY --from=builder /app/build ./build
+
+# Install serve globally
 RUN npm install -g serve
 
-# Serve the React application
+# Expose the port that serve will use
+EXPOSE 3000
+
+# Start the app in single-page mode (fallback to index.html)
 CMD ["serve", "-s", "build", "-l", "3000"]
