--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,27 +1,22 @@
-# Stage 1: Build the React app
-FROM node:20-bullseye-slim AS builder
+# Use the official Node.js image
+FROM node:20-bullseye-slim
+
+# Set the working directory inside the container
 WORKDIR /app
 
 # Copy package files and install dependencies
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
 
-# Copy the rest of the source code and build the app
+# Copy the rest of the application and build it
 COPY . .
 RUN npm run build
 
-# Stage 2: Serve the built app using serve
-FROM node:20-bullseye-slim
-WORKDIR /app
-
-# Copy the production build from the builder stage
-COPY --from=builder /app/build ./build
+# Expose port 3000
+EXPOSE 3000
 
 # Install serve globally
 RUN npm install -g serve
 
-# Expose the port that serve will use
-EXPOSE 3000
-
-# Start the app in single-page mode (fallback to index.html)
-CMD ["serve", "-s", "build", "-l", "3000"]
+# Serve the React application from the "dist" folder in single-page mode
+CMD ["serve", "-s", "dist", "-l", "3000"]
