fixing frontend tests config

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,22 +1,24 @@
 # Use the official Node.js image
 FROM node:20-bullseye-slim
 
-# Set the working directory inside the container
+# Set working directory inside the container
 WORKDIR /app
 
-# Copy package files and install dependencies
+# Copy package files and install dependencies (includes dev dependencies)
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
 
-# Copy the rest of the application and build it
+# Copy the entire source code into the container
 COPY . .
+
+# Build the application (assumes output is in the "dist" folder)
 RUN npm run build
 
 # Expose port 3000
 EXPOSE 3000
 
-# Install serve globally
+# Install serve globally so we can serve the production build
 RUN npm install -g serve
 
-# Serve the React application from the "dist" folder in single-page mode
+# Default command: serve the built app in single-page mode
 CMD ["serve", "-s", "dist", "-l", "3000"]
