Add LLM and Email microservices + architecture updates

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,7 @@ SENDINBLUE_API_KEY=your_sendinblue_api_key
 SENDER_EMAIL=your_sender_email
 CONTACT_RECIPIENT_EMAIL=your_contact_recipient_email
 VITE_API_URL=http://backend:8000
+LLM_SERVICE_URL=http://llm_microservice:9000
+EMAIL_SERVICE_URL=http://email_microservice:9002
 
 
