--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    # environment:
+    #   - LLM_SERVICE_URL=http://llm_microservice:9000
+    #   - EMAIL_SERVICE_URL=http://email_microservice:9002
+    depends_on:
+      - llm_microservice
+      - email_microservice
     networks:
       - app-network
 
@@ -16,6 +22,28 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    networks:
+      - app-network
+
+  llm_microservice:
+    build:
+      context: ./llm_microservice
+      dockerfile: Dockerfile
+    ports:
+      - "9000:9000"
+    env_file:
+      - .env
+    networks:
+      - app-network
+
+  email_microservice:
+    build:
+      context: ./email_microservice
+      dockerfile: Dockerfile
+    ports:
+      - "9002:9002"
+    env_file:
+      - .env
     networks:
       - app-network
 
